add silly ai generated banner

--- a/README.mdx
+++ b/README.mdx
@@ -1,6 +1,10 @@
 # CS2 AI Coach - Statistical Analysis Engine
 
-A fast, privacy-first Counter-Strike 2 coaching assistant providing advanced statistical analysis and optional AI commentary. Available as both an MCP server and a deployed HTTP API.
+<center>
+<img src="/assets/banner.png" alt="CS2 AI Coach Banner" />
+
+> A fast, privacy-first Counter-Strike 2 coaching assistant providing advanced statistical analysis and optional AI commentary. Available as both an MCP server and a deployed HTTP API. 
+</center>
 
 **Current Status**: ✅ **Production Ready**
 
