add ci pipeline

--- a/README.mdx
+++ b/README.mdx
@@ -1,6 +1,16 @@
 
+
 <p align="center">
   <img src="./assets/banner.png" alt="CS2 AI Coach Banner" height="48"/>
+</p>
+
+<p align="center">
+  <a href="https://github.com/sord-dev/cs2-coach/actions">
+    <img src="https://img.shields.io/github/actions/workflow/status/sord-dev/cs2-coach/ci.yml?branch=main" alt="Build Status"/>
+  </a>
+  <a href="LICENSE">
+    <img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="License"/>
+  </a>
 </p>
 
 # CS2 AI Coach
@@ -12,6 +22,8 @@
   Advanced statistical analysis & <b>optional local AI</b>.<br/>
   Deploy as an MCP server or HTTP API in minutes.
 </p>
+
+[//]: # "Demo section (add a GIF or screenshot here for visual context)"
 
 
 <details>
@@ -40,6 +52,7 @@
 - [System Architecture](docs/architecture.md)
 
 ---
+
 
 ## 🤖 Enable Local AI (Ollama)
 
@@ -70,6 +83,7 @@
   ```
 
 
+
 <details>
 <summary><b>💡 Need help?</b></summary>
 
@@ -95,9 +109,10 @@ See [Architecture & Setup](docs/architecture.md) for troubleshooting and advance
 
 MIT License – see `LICENSE` file for details.
 
+
 ## 🙋 Support
 
-For troubleshooting, health checks, and advanced usage, see the [docs/](docs/) directory and open an issue if needed.
+For troubleshooting, health checks, and advanced usage, see the [docs/](docs/) directory or [open an issue](https://github.com/sord-dev/cs2-coach/issues) if needed.
 
 ## 🔗 Related Links
 
